update NDK so github action can complete

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,6 +7,7 @@ apply plugin: 'androidx.navigation.safeargs'
 android {
     compileSdkVersion 29
     buildToolsVersion "29.0.3"
+    ndkVersion "21.3.6528147"
 
     buildFeatures {
         dataBinding true
