--- a/build.gradle
+++ b/build.gradle
@@ -1,13 +1,18 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
-    ext.kotlin_version = "1.4.0"
+    ext.build_tools_version = "4.1.1"
+    ext.junit_version = "4.13"
+    ext.kotlin_version = "1.4.20"
+    ext.mockito_version = "3.1.0"
+    ext.navigation_safe_args_gradle_plugin_version = "1.0.0"
+    ext.rxjava_version = "2.2.14"
     repositories {
         google()
         jcenter()
     }
     dependencies {
-        classpath 'android.arch.navigation:navigation-safe-args-gradle-plugin:1.0.0'
-        classpath "com.android.tools.build:gradle:4.0.1"
+        classpath "android.arch.navigation:navigation-safe-args-gradle-plugin:$navigation_safe_args_gradle_plugin_version"
+        classpath "com.android.tools.build:gradle:$build_tools_version"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
 
         // NOTE: Do not place your application dependencies here; they belong
