--- a/core/build.gradle
+++ b/core/build.gradle
@@ -2,12 +2,12 @@ apply plugin: 'java-library'
 apply plugin: 'kotlin'
 
 dependencies {
-    implementation 'io.reactivex.rxjava2:rxjava:2.2.14'
+    implementation "io.reactivex.rxjava2:rxjava:$rxjava_version"
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 
-    testImplementation 'junit:junit:4.12'
-    testImplementation 'org.mockito:mockito-core:2.23.4'
+    testImplementation "junit:junit:$junit_version"
+    testImplementation "org.mockito:mockito-core:$mockito_version"
 }
 
 sourceCompatibility = "1.7"
