--- a/build.gradle
+++ b/build.gradle
@@ -3,9 +3,9 @@ buildscript {
     ext.build_tools_version = "4.1.1"
     ext.junit_version = "4.13"
     ext.kotlin_version = "1.4.20"
+    ext.kotlin_coroutines_version = "1.4.1"
     ext.mockito_version = "3.1.0"
     ext.navigation_safe_args_gradle_plugin_version = "1.0.0"
-    ext.rxjava_version = "2.2.14"
     repositories {
         google()
         jcenter()
