--- a/build.gradle
+++ b/build.gradle
@@ -1,17 +1,18 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
-    ext.build_tools_version = "4.1.1"
+    ext.build_tools_version = "7.1.2"
     ext.junit_version = "4.13"
-    ext.kotlin_version = "1.4.20"
-    ext.kotlin_coroutines_version = "1.4.1"
+    ext.kotlin_version = "1.6.20"
+    ext.kotlin_coroutines_version = "1.6.0"
     ext.mockito_version = "3.1.0"
-    ext.navigation_safe_args_gradle_plugin_version = "1.0.0"
+    ext.navigation_safe_args_gradle_plugin_version = "2.4.2"
     repositories {
         google()
+        mavenCentral()
         jcenter()
     }
     dependencies {
-        classpath "android.arch.navigation:navigation-safe-args-gradle-plugin:$navigation_safe_args_gradle_plugin_version"
+        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$navigation_safe_args_gradle_plugin_version"
         classpath "com.android.tools.build:gradle:$build_tools_version"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
 
@@ -23,6 +24,7 @@ buildscript {
 allprojects {
     repositories {
         google()
+        mavenCentral()
         jcenter()
     }
 }
